# rededup

./: .gitignore  README.md  TODO  pyproject.toml
src/arindexer/: __init__.py  _archive.py  _archive_importer.py  _archive_settings.py  _archive_store.py  _duplicate_finder.py  _file_context.py  _rebuild_refresh.py  _throttler.py  archive.py  cli.py
src/arindexer/commands/: __init__.py  analyze.py  analyzer.py  archive_importer.py  describe.py  diff_tree.py  do_import.py  duplicate_finder.py  rebuild_refresh.py
src/arindexer/report/: duplicate_match.py  path.py  store.py
src/arindexer/store/: archive_settings.py  archive_store.py  path.py
src/arindexer/utils/: __init__.py  directory_listener.py  keyed_lock.py  processor.py  walker.py
src/rededup/: __init__.py  cli.py  repository.py
src/rededup/index/: path.py  (+3 more)
tests/: __init__.py  test_archive.py  test_archive_core.py  test_common_lifecycle_0.txt  test_ec_storage.py  test_edge_cases.py  test_import.py  test_rebuild_with_collision_data.txt  test_repository.py  test_symlink_following.py  test_utils.py  test_walker.py
tests/commands/: __init__.py  test_analyzer.py  test_archive_importer.py  test_describe.py  test_describe_options.py  test_diff_tree.py  test_directory_analysis.py  test_do_import.py  test_duplicate_finder.py  test_duplicate_match.py  test_duplicate_record.py  test_file_analysis.py  test_find_report.py  test_report_reader.py  test_report_store.py  test_report_writer.py
tests/index/: __init__.py  test_file_signature_collisions.py  test_find_repository.py  test_store.py  test_symlink_following.py
tests/report/: __init__.py  test_duplicate_match.py  test_duplicate_record.py  test_report_store.py
tests/store/: test_file_signature_collisions.py  test_find_archive.py  test_symlink_following.py
tests/utils/: test_directory_listener.py  test_processor.py  test_profiling.py  test_walker.py
(+15 files in other folders)
