[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rededup"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "mmh3",
    "msgpack",
    "plyvel",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rededup = "rededup.cli:rededup_main"

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["src"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]